# pos-tech-hackathon

./: README.md  create_tables.sql  docker-compose.yml  example.env  pyproject.toml  sonar-project.properties  task_definition_ecs-revision1.json
.github/workflows/: python-app.yml
src/: app.py
src/adapters/: customer_json_adapter.py  time_sheet_json_adapter.py  user_json_adapter.py
src/api/endpoints/: auth_api.py  customer_api.py  health_api.py  time_sheet_api.py  user_api.py
src/config/: config.py  security.py
src/controllers/: customer_controller.py  time_sheet_controller.py  user_controller.py
src/entities/errors/: time_sheet_error.py  user_error.py
src/entities/models/: time_sheet_entity.py  user_entity.py
src/entities/schemas/: time_sheet_dto.py  user_dto.py
src/gateways/orm/: time_sheet_orm.py  user_orm.py
src/gateways/postgres_gateways/: customer_gateway.py  time_sheet_gateway.py  user_gateway.py
src/interfaces/gateways/: customer_gateway_interface.py  time_sheet_gateway_interface.py  user_gateway_interface.py
src/interfaces/use_cases/: customer_usecase_interface.py  time_sheet_usecase_interface.py  user_usecase_interface.py
src/usecases/: customer_usecase.py  time_sheet_usecase.py  user_usecase.py
src/utils/: utils.py
