[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Rafael Ferreira <rperinfe@emeal.nttdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
gunicorn = "^21.2.0"
pydantic-settings = "^2.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
mailtrap = "^2.0.1"
boto3 = "^1.34.69"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

